# DiNoScore

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  Windows.md  appimage.nix  build.rs  editor.md  rustfmt.toml  sheets.md  shell.nix  tmp.txt
.cargo/: config
.github/workflows/: push.yml
res/: editor.glade  viewer.glade
res/editor/: de.piegames.dinoscore.editor.desktop  page.ui  resources.gresource.xml  window.ui
res/icons/: resources.gresource.xml
res/viewer/: de.piegames.dinoscore.viewer.desktop  library.ui  resources.gresource.xml  song.ui  song_preview.ui  window.ui
src/: collection.rs  image_util.rs  layout.rs  lib.rs  library.rs  owned.rs  page_image.rs  recognition.rs  song.rs  unsafe_force.rs
src/cli/: main.rs
src/editor/: editor.rs  main.rs  page.rs  screenshots.rs
src/viewer/: crash_n_log.rs  fullscreen_actor.rs  library_actor.rs  library_widget.rs  main.rs  main2.rs  mouse_actor.rs  pedal.rs  screenshots.rs  song_actor.rs  song_page.rs  song_preview.rs  song_widget.rs  test.rs  unique_future.rs  window.rs  xournal.rs
test/recognition/: edges.tif  reference_data.json
