[package]
name = "dinoscore"
version = "0.1.0"
authors = ["piegames <git@piegames.de>"]
edition = "2018"
default-run = "viewer"

[[bin]]
name = "viewer"
path = "src/viewer/main.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[lib]
name = "dinoscore"
path = "src/lib.rs"

[profile.dev]
# strip = "symbols" # Not stable yet
lto = "off" # even less than 'false'

[profile.release]
# strip = "symbols" # Not stable yet
lto = true

[dependencies]

# GTK dependencies
gtk = { version = "0.9.2", features = ["v3_20"] }
gio = { version = "0.9.1" }
gdk = { version = "0.13.2" }
gdk-pixbuf = { version = "0.9.0", features = [ "v2_36" ] }
glib = { version = "0.10.3" }
# poppler = { version = "0.3.0" }
poppler = { path = "./poppler-rs" }
cairo-rs =  { version = "0.9.1", features = ["v1_16", "use_glib", "png", "pdf"] }
# libhandy = "1.0.0-alpha" # 
libhandy = { git = "https://gitlab.gnome.org/World/Rust/libhandy-rs" }
# libhandy = { path = "./libhandy-rs/libhandy" }

itertools = "0.9.0"
maplit = "1.0.2"
either = "1.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.5.0-alpha.2"
reduce = "0.1.3" # Remove once fold_once is stabilized
zip  = "0.5.6"
futures = "0.3.5"
blocking = "0.5.2"
midi-event = "0.2.0"
portmidi = "0.2.5"
derive_more = "0.99.9"
once_cell = "1.4.1"
noisy_float = "0.1.13"
xdg = "2.2.0"

# Editor dependencies
tensorflow = { version = "0.15.0", optional = true }
opencv = { version = "0.43", features = ["buildtime-bindgen", "clang-runtime"], optional = true }

[features]
default = ["viewer", "editor"]
viewer = []
editor = ["opencv", "tensorflow" ]
