[package]
name = "dinoscore"
version = "0.3.0"
authors = ["piegames <git@piegames.de>"]
edition = "2018"
default-run = "viewer"

[[bin]]
name = "viewer"
path = "src/viewer/main.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[lib]
name = "dinoscore"
path = "src/lib.rs"

[profile.dev]
# strip = "symbols" # Not stable yet
lto = "off" # even less than 'false'

[profile.release]
# strip = "symbols" # Not stable yet
lto = true

[dependencies]

# GTK dependencies
gtk = { version = "0.9.2", features = ["v3_20"] }
gio = { version = "0.9.1" }
gdk = { version = "0.13.2" }
gdk-pixbuf = { version = "0.9.0", features = [ "v2_36" ] }
glib = { version = "0.10.3" }
# poppler = { version = "0.3.0" }
# poppler = { path = "./poppler-rs" }
poppler = { git = "https://github.com/piegamesde/poppler-rs" }
cairo-rs =  { version = "0.9.1", features = ["v1_16", "use_glib", "png", "pdf"] }
# libhandy = "1.0.0-alpha" # 
libhandy = { git = "https://gitlab.gnome.org/World/Rust/libhandy-rs" }
# libhandy = { path = "./libhandy-rs/libhandy" }

itertools = "0.10.0"
maplit = "1.0.2"
either = "1.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
zip = "0.5.9"
futures = "0.3.5"
midi-event = "0.2.0"
portmidi = "0.2.5"
derive_more = "0.99.9"
once_cell = "1.4.1"
noisy_float = "0.2.0"
# xdg = "2.2.0"
xdg = { git = "https://github.com/piegamesde/rust-xdg"}
uuid = { version = "0.8.2", features = [ "v4", "serde" ] }
tokio = "1.6.1"
lru-disk-cache = "0.4.1"
woab = { git = "https://github.com/idanarye/woab.git" }
actix = { version = "0.11.1" }
# tokio = "1.4"
fragile = "1.0.0"
maybe-owned = { version = "0.3.4", features = ["serde"] }
# inline-python = "0.6.0"
anyhow = "1.0.40"
pyo3 = "0.13.2"
walkdir = "2"
log = "0.4.14"
simple_logger = "1.11.0"
atomicwrites = "0.3.0"
flate2 = "1.0.20"
pipeline = { git = "https://github.com/piegamesde/pipeline.rs" }
typed-index-collections = { version = "3.0.3", features = [ "serde-std" ] }

# Editor dependencies
tensorflow = { version = "0.16.0", optional = true }
# opencv = { version = "0.43", features = ["buildtime-bindgen", "clang-runtime"], optional = true }
blocking = { version = "1.0.2", optional = true }

# CLI dependencies
clap = { version = "2.33.3", optional = true }

[features]
default = ["viewer", "editor", "cli"]
viewer = []
editor = [
    # "opencv", 
    "tensorflow",
    "blocking"
]
cli = [
    "clap"
]
