[package]
name = "dinoscore"
version = "0.4.0"
authors = ["piegames <git@piegames.de>"]
edition = "2021"
default-run = "viewer"

# https://github.com/rust-lang/cargo/issues/9778
[[bin]]
name = "viewer"
path = "src/viewer/main.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[lib]
name = "dinoscore"
path = "src/lib.rs"

[profile.dev]
# strip = "symbols" # Not stable yet
lto = "off" # even less than 'false'

[profile.release]
# strip = "symbols" # Not stable yet
lto = true

[dependencies]

# GTK dependencies
libadwaita = "0.2.1"
gtk4 = "0.5.3"
glib = { version = "*", features = ["log"] }
cairo-rs = { version = "*", features = ["png", "pdf", "svg", "v1_16"]}
poppler-rs = { version = "0.20.0", features = ["v20_9"] }

# Utility
atomicwrites = "0.3.0"
pipeline = { git = "https://github.com/piegamesde/pipeline.rs" }
git-version = "0.3.4"
itertools = "0.10.0"
noisy_float = "0.2.0"

# Utility containers
either = "1.6.0"
maybe-owned = { version = "0.3.4", features = ["serde"] }
typed-index-collections = { version = "3.0.3", features = [ "serde-std" ] }
once_cell = "1.4.1"
fragile = "1.0.0"

# File format
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
derive_more = "0.99.9"
zip = "0.5.9"
# xdg = "2.2.0"
xdg = { git = "https://github.com/piegamesde/rust-xdg"}
uuid = { version = "0.8.2", features = [ "v4", "serde" ] }
walkdir = "2"
pyo3 = { version = "0.16.4", features = [ "auto-initialize", "anyhow", "abi3-py37", "generate-abi3-import-lib" ] }

# Xournal
flate2 = "1.0.20"
lenient_semver_parser = { version = "0.4.2", default-features = false }
lenient_version = { version = "0.4.2" }

# Async
futures = "0.3.5"

# Crash and log
log = "0.4.14"
log-panics = { version = "2.0.0", features = [ "with-backtrace" ] }
fern = { git = "https://github.com/piegamesde/fern", features = [ "date-based", "colored" ]}
chrono = "0.4.19"
anyhow = "1.0.40"
backtrace = "0.3.60"

# Resource compilation
gvdb = { version = "0.2.1", features = [ "gresource" ] }
gvdb-macros = "0.1.4"

# Editor dependencies
blocking = { version = "1.0", optional = true }
image = { version = "0.24.1", features = ["png"], default-features = false, optional = true }
imageproc = { version = "0.23.0", optional = true }
attohttpc = { version = "0.19.1", features = ["multipart-form", "json"], optional = true }

# CLI dependencies
clap = { version = "3.2", features = ["cargo", "derive", "wrap_help"], optional = true }

[target.'cfg(unix)'.dependencies]
# Midi
midi-event = "0.2.0"
portmidi = "0.2.5"

[build-dependencies]
gio = "0.15"
xdg = { git = "https://github.com/piegamesde/rust-xdg"}

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["viewer", "editor", "cli"]
viewer = []
editor = [
    "image",
    "imageproc",
    "attohttpc",
    "blocking",
]
cli = [
    "clap",
    "editor", # We still need to be able to do recognition
]
